<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="@dimen/app_bar_elevation">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/toolbar_height"
            android:layout_gravity="bottom"
            app:layout_scrollFlags="scroll|enterAlways"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <TextView
                style="@style/ToolbarTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/home_toolbar_title" />

        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nestedScroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="@dimen/below_toolbar_padding"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <android.support.v7.widget.CardView
                    android:id="@+id/card_popular_pharaohs"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:elevation="@dimen/card_elevation">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_horizontal"
                        android:orientation="vertical"
                        android:padding="3dp">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/home_pharaohs_img"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/card_img_height"
                            android:layout_gravity="center_vertical"
                            android:src="@drawable/akhenaton"
                            android:transitionName="@string/phara"
                            app:civ_border_color="#FF000000"
                            app:civ_border_width="1dp" />

                        <TextView
                            style="@style/CardTitle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:text="@string/card_pharaoh" />
                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/card_pyramids"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:elevation="@dimen/card_elevation">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_horizontal"
                        android:orientation="vertical"
                        android:padding="3dp"
                        android:weightSum="3">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/home_pyramids_img"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/card_img_height"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="1"
                            android:src="@drawable/pryamids_one"
                            android:transitionName="@string/pyramids"
                            app:civ_border_color="#FF000000"
                            app:civ_border_width="1dp" />

                        <TextView
                            style="@style/CardTitle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="2"
                            android:text="@string/card_pyramids" />
                    </LinearLayout>
                </android.support.v7.widget.CardView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <android.support.v7.widget.CardView
                    android:id="@+id/card_gods"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:elevation="@dimen/card_elevation">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_horizontal"
                        android:orientation="vertical"
                        android:padding="3dp">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/home_god_img"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/card_img_height"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="1"
                            android:src="@drawable/osiris"
                            android:transitionName="@string/god"
                            app:civ_border_color="#FF000000"
                            app:civ_border_width="1dp" />

                        <TextView
                            style="@style/CardTitle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="2"
                            android:text="@string/card_gods" />
                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/card_maps"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:elevation="@dimen/card_elevation">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_horizontal"
                        android:orientation="vertical"
                        android:padding="3dp">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/home_map_img"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/card_img_height"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="1"
                            android:src="@drawable/map_of_ancient_egypt"
                            android:transitionName="@string/map"
                            app:civ_border_color="#FF000000"
                            app:civ_border_width="1dp" />

                        <TextView
                            style="@style/CardTitle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="2"
                            android:text="@string/card_maps" />

                    </LinearLayout>
                </android.support.v7.widget.CardView>
            </LinearLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>
